--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
         <activity android:name=".ui.activity.DailyDetailActivity" />
         <activity android:name=".ui.activity.ReadDetailActivity" />
         <activity android:name=".ui.activity.ScienceDetailActivity" />
-        <activity android:name=".ui.activity.WechatDetailActivity"></activity>
+        <activity android:name=".ui.activity.WechatDetailActivity" />
+        <activity android:name=".ui.activity.MovieVDDetailActivity" />
+        <activity android:name=".ui.activity.MovieDetailActivity"></activity>
     </application>
 
 </manifest>
