--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     compile 'com.yalantis:phoenix:1.2.3'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.makeramen:roundedimageview:2.2.1'
+    compile project(':vitamio')
+
 }
