--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permisson.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:name=".FingerReadApplication"
         android:allowBackup="true"
@@ -30,6 +31,7 @@
         <activity android:name=".ui.activity.WechatDetailActivity" />
         <activity android:name=".ui.activity.MovieVDDetailActivity" />
         <activity android:name=".ui.activity.MovieDetailActivity"></activity>
+        <activity android:name="io.vov.vitamio.activity.InitActivity"></activity>
     </application>
 
 </manifest>
