--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:name=".FingerReadApplication"
         android:allowBackup="true"
@@ -30,8 +31,9 @@
         <activity android:name=".ui.activity.ScienceDetailActivity" />
         <activity android:name=".ui.activity.WechatDetailActivity" />
         <activity android:name=".ui.activity.MovieVDDetailActivity" />
-        <activity android:name=".ui.activity.MovieDetailActivity"></activity>
-        <activity android:name="io.vov.vitamio.activity.InitActivity"></activity>
+        <activity android:name=".ui.activity.MovieDetailActivity" />
+        <activity android:name="io.vov.vitamio.activity.InitActivity" />
+        <activity android:name=".ui.activity.MovieCommentZYActivity"></activity>
     </application>
 
 </manifest>
