--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile project(':vitamio')
+
+    //友盟统计
+    compile 'com.umeng.analytics:analytics:latest.integration'
 }
